integrated map feature for user location

--- a/Examples/ListUsingBloc/pubspec.yaml
+++ b/Examples/ListUsingBloc/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   bloc: ^8.0.1
   cached_network_image: ^3.2.0
   google_fonts: ^2.1.0
+  google_maps_flutter: ^2.1.1
+  flutter_map: ^0.14.0
 
 dev_dependencies:
   flutter_test:
